done artist detail page and add stoptrack section and similar artist item in shared folder

--- a/src/app/modules/genredetail/genredetail.component.html
+++ b/src/app/modules/genredetail/genredetail.component.html
@@ -93,278 +93,38 @@
         </div>
 
         <div class="wrap-section vf-main-track">
-                <div class="container">
-                    <div class="wrap-haftsection">
-                        <header class="menuSection">
-                            <h3 class="title">
-                                Song Highlights
-                            </h3>	
-                            <!-- <div class="wrap-viewall absolutess absolutess">
-                                <a href="#" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>						
-                            </div> -->				
-                        </header>
-                        <div class="listvideo">							
-    
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-    
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-                            <article class="video" >
-                                <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                                    <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#">										
-                                    </a>
-                                    <span class="duration">17:30</span>
-                                    
-                                </p>
-                                <header class="meta">
-                                    <h3 class="title">
-                                        <a title="Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015" rel="bookmark" href="#"> Vợ chồng Bầu Long mất gần 1.200 tỷ đồng trên sàn chứng khoán năm 2015 </a>
-                                    </h3>	
-                                    <p class="uploader">
-                                        <a title="videofly" href="#">Video fly</a>
-                                        <span class="vf-confirm" title="Đã xác nhận">
-                                            <i class="fa fa-check-square" aria-hidden="true"></i>
-                                        </span>
-                                    </p>
-                                    <ul>
-                                        <li class="watch-count">
-                                            3K lượt xem
-                                        </li>
-                                        <li class="datetime">
-                                            3 ngày trước
-                                        </li>
-                                    </ul>						
-                                </header>
-                                <div class="wrapPlaynow">	                            
-                                    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
-                                </div>
-                            </article>
-    
-                        </div>	
-                    </div>
+            <div class="container">
+                <div class="wrap-haftsection">
+                    <header class="menuSection">
+                        <h3 class="title">
+                            Song Highlights
+                        </h3>	
+                        <!-- <div class="wrap-viewall absolutess absolutess">
+                            <a href="#" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>						
+                        </div> -->				
+                    </header>
                     
                 </div>
+
+                <app-strackvideos></app-strackvideos>
+                
             </div>
+        </div>
             
 
         <div class="wrap-section vf-playlist">			
-                <header class="menuSection">
-                    <h3 class="title">
-                        Playlist Highlights
-                    </h3>
-                    <div class="wrap-viewall absolutess">
-                        <a href="#" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>							
-                    </div>
-                </header>
-                <app-splaylist-slide></app-splaylist-slide>
-            </div>
+            <header class="menuSection">
+                <h3 class="title">
+                    Playlist Highlights
+                </h3>
+                <div class="wrap-viewall absolutess">
+                    <a href="#" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>							
+                </div>
+            </header>
+            <app-splaylist-slide></app-splaylist-slide>
+        </div>
+       
+                   
     </div>
   
 </div>
