--- a/src/app/modules/music-page/music-page.component.scss
+++ b/src/app/modules/music-page/music-page.component.scss
@@ -9,11 +9,13 @@
 			color:#000;
 			display: inline-block;
 			font-weight: bold;
+			cursor: pointer;
 		}
 		#tab_PlaylistAdded
 		{
 			color: #999;
 			display: inline-block;
+			cursor: pointer;
 		}
 		
 	}
