--- a/src/app/shared/components/items/artistitem/artistitem.component.html
+++ b/src/app/shared/components/items/artistitem/artistitem.component.html
@@ -1,7 +1,7 @@
 <article class="artist-item">						
     <div class="wrap-thumb">
-      <p class="thumbnail" style="background-image:url(./assets/images/adele.png) "><a href="#" ></a></p> 
-      <button class="vf-followplbtn" title="Theo dõi playlist">
+      <p class="thumbnail" style="background-image:url(./assets/images/adele.png) "><a routerLink="/am-nhac/artist-detail" title="Adele" ></a></p> 
+      <button class="vf-followplbtn" title="Theo dõi nghệ sĩ">
         <span class=" followpl-icon">
             <i class="fa fa-star-o" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -10,7 +10,7 @@
     </div>							
     <div class="wrap-title">
       <header><h3 class="title">
-        <a href="#">Adele
+        <a routerLink="/am-nhac/artist-detail">Adele
             <span class="art-birthday">Dec 13th, 1989</span>
           </a> 
       </h3></header>
