--- a/src/app/shared/components/items/videoitem/videoitem.component.html
+++ b/src/app/shared/components/items/videoitem/videoitem.component.html
@@ -22,4 +22,7 @@
       </li>
     </ul>						
   </header>
+  <div class="wrapPlaynow">	                            
+    <a href="#" title="Play"><span class="icon-webs playicon"></span></a>
+</div>
 </article>
